--- a/.classpath
+++ b/.classpath
@@ -30,5 +30,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/POIExcel"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
